tests/compile_fail/declare_scheduler_duplicate_field.rs
use ktstr::declare_scheduler;

declare_scheduler!(MY_SCHED, {
    name = "first",
    binary = "scx_my_sched",
    name = "second",
});

fn main() {}
